# arb

./: Cargo.toml
arbot/: Cargo.toml  logic.rs
arbot/src/: logic.rs  main.rs  trade.rs
arbot/tests/: logic.rs
example/: Cargo.toml
example/src/: main.rs
src/: buy_logic.rs  logic.rs  macd.rs  main.rs  sell_logic.rs  trade.rs
