[package]
name = "arbot"
version = "0.1.0"
description = ""
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.18.7"
solana-client = "1.18.7"
bincode = "1.3.3"
ta = "0.4.0"
jupiter-swap-api-client = "0.1.0"
solana-program = "1.18.7"
spl-associated-token-account = "2.2.0"
chrono = "0.4.35"
